@@ -32,11 +32,14 @@ AC_DEFUN([GNOME_LIBGTOP_HOOK],
 	AC_SUBST(LIBGTOP_GUILE_LIBS)
 	AC_SUBST(LIBGTOP_GUILE_NAMES_INCS)
 	AC_SUBST(LIBGTOP_GUILE_NAMES_LIBS)
-	AC_SUBST(LIBGTOP_MINOR_VERSION)
 	AC_SUBST(LIBGTOP_MAJOR_VERSION)
+	AC_SUBST(LIBGTOP_MINOR_VERSION)
+	AC_SUBST(LIBGTOP_MICRO_VERSION)
+	AC_SUBST(LIBGTOP_VERSION)
+	AC_SUBST(LIBGTOP_VERSION_CODE)
+	AC_SUBST(LIBGTOP_SERVER_VERSION)
 	AC_SUBST(LIBGTOP_INTERFACE_AGE)
 	AC_SUBST(LIBGTOP_BINARY_AGE)
-	AC_SUBST(LIBGTOP_VERSION)
 	AC_SUBST(LIBGTOP_BINDIR)
 	AC_SUBST(LIBGTOP_SERVER)
 
@@ -126,6 +129,12 @@ AC_DEFUN([GNOME_LIBGTOP_HOOK],
 	fi
 	if test x$no_libgtop = x ; then
 	  AC_DEFINE(HAVE_LIBGTOP)
+	  AC_DEFINE_UNQUOTED(LIBGTOP_VERSION, "$LIBGTOP_VERSION")
+	  AC_DEFINE_UNQUOTED(LIBGTOP_VERSION_CODE, $LIBGTOP_VERSION_CODE)
+	  AC_DEFINE_UNQUOTED(LIBGTOP_MAJOR_VERSION, $LIBGTOP_MAJOR_VERSION)
+	  AC_DEFINE_UNQUOTED(LIBGTOP_MINOR_VERSION, $LIBGTOP_MINOR_VERSION)
+	  AC_DEFINE_UNQUOTED(LIBGTOP_MICRO_VERSION, $LIBGTOP_MICRO_VERSION)
+	  AC_DEFINE_UNQUOTED(LIBGTOP_SERVER_VERSION, $LIBGTOP_SERVER_VERSION)
 	  AC_MSG_RESULT(yes)
 	  dnl Note that an empty true branch is not valid sh syntax.
 	  ifelse([$2], [], :, [$2])
